@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-06T08:17:44Z",
+  "timestamp" : "2022-05-06T16:19:34Z",
   "count_outdated" : 16,
   "uniques_outdated" : 10,
-  "count" : 58,
-  "uniques" : 38,
+  "count" : 59,
+  "uniques" : 39,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -42,10 +42,10 @@
     },
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 0, 6 ],
-      "uniques": 5,
-      "uniques_minmax": [ 0, 5 ]
+      "count": 7,
+      "count_minmax": [ 0, 7 ],
+      "uniques": 6,
+      "uniques_minmax": [ 0, 6 ]
     }
   ]
 }
