@@ -1,6 +1,6 @@
 {
-  "count": 42,
-  "uniques": 12,
+  "count": 43,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -29,8 +29,8 @@
     },
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 6,
-      "uniques": 5
+      "count": 7,
+      "uniques": 6
     }
   ]
 }
