@@ -1,3 +1,9 @@
+2022-05-06T16:19:34Z:
+* notice: last 14d: all unq: 43 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 16 10 / 58 38
+* notice: next accum: outdated-all outdated-unq / all unq: 16 10 / 59 39
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +7 +8 / -0 -0
+
 2022-05-06T08:17:44Z:
 * notice: last 14d: all unq: 42 12
 * notice: prev accum: outdated-all outdated-unq / all unq: 16 10 / 52 33
